--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="pl">
 <head>
 <title>Moja pierwsza aplikacja w Bootstrapie</title>
-<link rel="stylesheet" type="text/css" href="css/nootstrap.css"
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 </head>
 <body>
 <script src="js/jquery.js"></script>
-/,<script src="js/bootstrap.js"></script>
-
-</script>
+<script src="js/bootstrap.js"></script>
 </body>
 </html>
